--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title></title>
+  <title>Time Block</title>
+  <link rel="Icon" href="https://img.icons8.com/color/48/000000/hourglass-sand-bottom--v2.png" />
+  
 </head>
 <link rel="stylesheet" href="style.css" type="text/css" media="all" />
 
